[package]
name = "space"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "crates/*"]

[dependencies]
ast = { version = "^0", path = "crates/ast" }

[[bin]]
name = "space"
path = "src/main.rs"
